--- a/clients/mobileui/styling.html
+++ b/clients/mobileui/styling.html
@@ -105,43 +105,43 @@
     <div class="scroller" data-childclass="serverLink">
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">us.raindrop.it</span>
         <span class="ps-serverName">Raindrop US Server</span>
-         (<span class="ps-serverUrl">us.raindrop.it</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">de.raindrop.it</span>
         <span class="ps-serverName">Raindrop German Server</span>
-         (<span class="ps-serverUrl">de.raindrop.it</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">gd.example.com</span>
         <span class="ps-serverName">Global Dynamics</span>
-         (<span class="ps-serverUrl">gd.example.com</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">md.example.com</span>
         <span class="ps-serverName">Massive Dynamic</span>
-         (<span class="ps-serverUrl">md.example.com</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">hipsters.example.com</span>
         <span class="ps-serverName">4 Hipsters Only!!!</span>
-         (<span class="ps-serverUrl">hipsters.example.com</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">friendly.example.com</span>
         <span class="ps-serverName">Friendly Mail Company's Friendly Mail Server that wants to be your friend, yes we do.  Do you not believe it?  You should!</span>
-         (<span class="ps-serverUrl">friendly.example.com</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">nefarious1.example.com</span>
         <span class="ps-serverName">Fraudulent Raindrop US Server (us.raindrop.it) ____________________________________________________ Someotheryestotally for sure</span>
-         (<span class="ps-serverUrl">nefarious1.example.com</span>)
       </a>
       <a data-classimpl="serverLink" class="ps-server"
          href="#connectToServer">
+        <span class="ps-serverUrl">us.raindrop.it.ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss.example.com</span>
         <span class="ps-serverName">Nefarious Server</span>
-         (<span class="ps-serverUrl">us.raindrop.it.ssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss.example.com</span>)
       </a>
     </div>
   </div>
@@ -231,33 +231,33 @@
     <div data-childclass="newbubGroupMsg" class="hpn-groupMsgContainer" >
       <!-- message 1: human -->
       <div class="hpn-groupMsg">
-        <div>
+        <div class="hpn-groupMsgHeader">
           <img class="hpn-pic PIC-bob" src="i/face2.png" />
           <span class="hpn-groupAuthorName">Bob</span>
           <span class="hpn-groupMsgTime">3 hours ago</span>
         </div>
-        <span class="newConversationText">Let's ask Charlie what he thinks
+        <span class="hpn-groupMsgText">Let's ask Charlie what he thinks
         about the roadtrip...</span>
       </div>
       <!-- message 2: join -->
       <div class="hpn-groupJoin">
-        <div>
+        <div class="hpn-groupJoinHeader">
           <img class="hpn-pic PIC-bob" src="i/face2.png" />
           <span class="hpn-groupInviterName">Bob</span>
           <span class="hpn-groupInviteTime">3 hours ago</span>
         </div>
-        <span>invited</span>
+        <span class="hpn-groupInviteLabel">invited</span>
         <span class="hpn-groupInviteeName">Charlie</span>
         <img class="hpn-pic PIC-charlie" src="i/face2.png" />
       </div>
       <!-- message 3: human -->
       <div class="hpn-groupMsg">
-        <div>
+        <div class="hpn-groupMsgHeader">
           <img class="hpn-pic PIC-charlie" src="i/face2.png" />
           <span class="hpn-groupAuthorName">Charlie</span>
           <span class="hpn-groupMsgTime">1 hour ago</span>
         </div>
-        <span class="newConversationText">I don't think a road trip to the
+        <span class="hpn-groupMsgText">I don't think a road trip to the
         North Pole is viable with all this global warming going on.</span>
       </div>
     </div>
@@ -268,27 +268,27 @@
      href="#groupConv">
     <div class="hpn-groupSummary">
       <span class="hpn-groupSummaryText">
-        Let's throw a hootenannie!
+        Let's throw a hootenannie as soon as possible!  NOW NOW NOW!
       </span>
     </div>
     <div data-childclass="newbubGroupMsg" class="hpn-groupMsgContainer" >
       <!-- message 1: human -->
       <div class="hpn-groupMsg">
-        <div>
+        <div class="hpn-groupMsgHeader">
           <img class="hpn-pic PIC-alice" src="i/face2.png" />
           <span class="hpn-groupAuthorName">Alice</span>
           <span class="hpn-groupMsgTime">2 hours ago</span>
         </div>
-        <span class="newConversationText">Is that like a party?</span>
+        <span class="hpn-groupMsgText">Is that like a party?</span>
       </div>
       <!-- message 2: human -->
       <div class="hpn-groupMsg">
-        <div>
+        <div class="hpn-groupMsgHeader">
           <img class="hpn-pic PIC-charlie" src="i/face2.png" />
           <span class="hpn-groupAuthorName">Charlie</span>
           <span class="hpn-groupMsgTime">1 hour ago</span>
         </div>
-        <span class="newConversationText">Yes, exactly.</span>
+        <span class="hpn-groupMsgText">Yes, exactly.</span>
       </div>
     </div>
   </a>
